--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "craftool",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "Create React App From Template",
   "main": "index.js",
   "author": "",
@@ -9,9 +9,10 @@
     "craft": "./index.js"
   },
   "dependencies": {
+    "extract-zip": "^1.6.0",
     "fs-extra": "^1.0.0",
     "request": "^2.79.0",
-    "extract-zip": "^1.6.0"
+    "resolve-file": "^0.3.0"
   },
   "repository": {
     "type": "git",
